slurm-31998554.out
Fail to get yarn configuration. /home/naglemi/miniconda3/envs/mwas/lib/python3.11/site-packages/jupyterlab/staging/yarn.js:4
(()=>{var Qge=Object.create;var AS=Object.defineProperty;var bge=Object.getOwnPropertyDescriptor;var Sge=Object.getOwnPropertyNames;var vge=Object.getPrototypeOf,xge=Object.prototype.hasOwnProperty;var J=(r=>typeof require<"u"?require:typeof Proxy<"u"?new Proxy(r,{get:(e,t)=>(typeof require<"u"?require:e)[t]}):r)(function(r){if(typeof require<"u")return require.apply(this,arguments);throw new Error('Dynamic require of "'+r+'" is not supported')});var Pge=(r,e)=>()=>(r&&(e=r(r=0)),e);var w=(r,e)=>()=>(e||r((e={exports:{}}).exports,e),e.exports),ut=(r,e)=>{for(var t in e)AS(r,t,{get:e[t],enumerable:!0})},Dge=(r,e,t,i)=>{if(e&&typeof e=="object"||typeof e=="function")for(let n of Sge(e))!xge.call(r,n)&&n!==t&&AS(r,n,{get:()=>e[n],enumerable:!(i=bge(e,n))||i.enumerable});return r};var Pe=(r,e,t)=>(t=r!=null?Qge(vge(r)):{},Dge(e||!r||!r.__esModule?AS(t,"default",{value:r,enumerable:!0}):t,r));var QK=w((GXe,BK)=>{BK.expor

SyntaxError: Unexpected token {
    at createScript (vm.js:56:10)
    at Object.runInThisContext (vm.js:97:10)
    at Module._compile (module.js:549:28)
    at Object.Module._extensions..js (module.js:586:10)
    at Module.load (module.js:494:32)
    at tryModuleLoad (module.js:453:12)
    at Function.Module._load (module.js:445:3)
    at Module.runMain (module.js:611:10)
    at run (bootstrap_node.js:387:7)
    at startup (bootstrap_node.js:153:9)

[I 2024-07-08 13:03:20.917 ServerApp] Package jupyterlab took 0.0000s to import
[I 2024-07-08 13:03:20.934 ServerApp] Package jupyter_lsp took 0.0167s to import
[W 2024-07-08 13:03:20.934 ServerApp] A `_jupyter_server_extension_points` function was not found in jupyter_lsp. Instead, a `_jupyter_server_extension_paths` function was found and will be used for now. This function name will be deprecated in future releases of Jupyter Server.
[I 2024-07-08 13:03:20.942 ServerApp] Package jupyter_server_terminals took 0.0079s to import
[I 2024-07-08 13:03:20.942 ServerApp] Package notebook took 0.0000s to import
[I 2024-07-08 13:03:20.944 ServerApp] Package notebook_shim took 0.0000s to import
[W 2024-07-08 13:03:20.944 ServerApp] A `_jupyter_server_extension_points` function was not found in notebook_shim. Instead, a `_jupyter_server_extension_paths` function was found and will be used for now. This function name will be deprecated in future releases of Jupyter Server.
[I 2024-07-08 13:03:20.945 ServerApp] jupyter_lsp | extension was successfully linked.
[I 2024-07-08 13:03:20.949 ServerApp] jupyter_server_terminals | extension was successfully linked.
[I 2024-07-08 13:03:20.953 ServerApp] jupyterlab | extension was successfully linked.
[W 2024-07-08 13:03:20.956 JupyterNotebookApp] 'password' has moved from NotebookApp to ServerApp. This config will be passed to ServerApp. Be sure to update your config before our next release.
[W 2024-07-08 13:03:20.958 ServerApp] ServerApp.password config is deprecated in 2.0. Use PasswordIdentityProvider.hashed_password.
[I 2024-07-08 13:03:20.958 ServerApp] notebook | extension was successfully linked.
[I 2024-07-08 13:03:21.262 ServerApp] notebook_shim | extension was successfully linked.
[I 2024-07-08 13:03:21.284 ServerApp] notebook_shim | extension was successfully loaded.
[I 2024-07-08 13:03:21.287 ServerApp] jupyter_lsp | extension was successfully loaded.
[I 2024-07-08 13:03:21.288 ServerApp] jupyter_server_terminals | extension was successfully loaded.
[I 2024-07-08 13:03:21.297 LabApp] JupyterLab extension loaded from /home/naglemi/miniconda3/envs/mwas/lib/python3.11/site-packages/jupyterlab
[I 2024-07-08 13:03:21.297 LabApp] JupyterLab application directory is /home/naglemi/miniconda3/envs/mwas/share/jupyter/lab
[I 2024-07-08 13:03:21.297 LabApp] Extension Manager is 'pypi'.
[I 2024-07-08 13:03:21.299 ServerApp] jupyterlab | extension was successfully loaded.
[I 2024-07-08 13:03:21.302 ServerApp] notebook | extension was successfully loaded.
[I 2024-07-08 13:03:21.302 ServerApp] Serving notebooks from local directory: /expanse/lustre/projects/jhu152/naglemi/mwas/CpGWAS
[I 2024-07-08 13:03:21.302 ServerApp] Jupyter Server 2.10.0 is running at:
[I 2024-07-08 13:03:21.302 ServerApp] http://localhost:8888/lab
[I 2024-07-08 13:03:21.302 ServerApp]     http://127.0.0.1:8888/lab
[I 2024-07-08 13:03:21.302 ServerApp] Use Control-C to stop this server and shut down all kernels (twice to skip confirmation).
[?1049h[22;0;0t[1;24r(B[m[4l[?7h[?1h=[39;49m[39;49m[37m[40m[H[2J[37m[40m[J(B[m[39;49m[37m[40m[39;49m[37m[40m[J[39;49m(B[m[22d[93m[44mGetting file://localhost/home/naglemi/.local/share/jupyter/runtime/jpserver-404[K[39;49m(B[m

[24;1H[?1049l[23;0;0t[?1l>[I 2024-07-08 13:03:22.154 ServerApp] Skipped non-installed server(s): bash-language-server, dockerfile-language-server-nodejs, javascript-typescript-langserver, jedi-language-server, julia-language-server, pyright, python-language-server, python-lsp-server, r-languageserver, sql-language-server, texlab, typescript-language-server, unified-language-server, vscode-css-languageserver-bin, vscode-html-languageserver-bin, vscode-json-languageserver-bin, yaml-language-server
[W 2024-07-08 13:04:09.013 ServerApp] 404 GET /api/kernels/2ea7398c-d400-45f1-a89a-b8610cbbb113?1720469048938 (127.0.0.1): Kernel does not exist: 2ea7398c-d400-45f1-a89a-b8610cbbb113
[W 2024-07-08 13:04:09.013 ServerApp] wrote error: 'Kernel does not exist: 2ea7398c-d400-45f1-a89a-b8610cbbb113'
    Traceback (most recent call last):
      File "/home/naglemi/miniconda3/envs/mwas/lib/python3.11/site-packages/tornado/web.py", line 1786, in _execute
        result = await result
                 ^^^^^^^^^^^^
      File "/home/naglemi/miniconda3/envs/mwas/lib/python3.11/site-packages/jupyter_server/services/kernels/handlers.py", line 75, in get
        model = await ensure_async(km.kernel_model(kernel_id))
                                   ^^^^^^^^^^^^^^^^^^^^^^^^^^
      File "/home/naglemi/miniconda3/envs/mwas/lib/python3.11/site-packages/jupyter_server/services/kernels/kernelmanager.py", line 500, in kernel_model
        self._check_kernel_id(kernel_id)
      File "/home/naglemi/miniconda3/envs/mwas/lib/python3.11/site-packages/jupyter_server/services/kernels/kernelmanager.py", line 531, in _check_kernel_id
        raise web.HTTPError(404, "Kernel does not exist: %s" % kernel_id)
    tornado.web.HTTPError: HTTP 404: Not Found (Kernel does not exist: 2ea7398c-d400-45f1-a89a-b8610cbbb113)
[W 2024-07-08 13:04:09.074 ServerApp] 404 GET /api/kernels/2ea7398c-d400-45f1-a89a-b8610cbbb113?1720469048938 (4639c631d1e7412dad2db633b71303b2@127.0.0.1) 61.62ms referer=http://localhost:8892/lab/tree/scripts
0.00s - Debugger warning: It seems that frozen modules are being used, which may
0.00s - make the debugger miss breakpoints. Please pass -Xfrozen_modules=off
0.00s - to python to disable frozen modules.
0.00s - Note: Debugging will proceed. Set PYDEVD_DISABLE_FILE_VALIDATION=1 to disable this validation.
[W 2024-07-08 13:04:28.974 LabApp] Could not determine jupyterlab build status without nodejs
[I 2024-07-08 13:04:29.358 ServerApp] New terminal with automatic name: 8
[I 2024-07-08 13:04:29.619 ServerApp] New terminal with automatic name: 1
[I 2024-07-08 13:04:31.187 ServerApp] Kernel started: c0e005f4-74c2-4db9-8cf6-58f3091ffde5
[I 2024-07-08 13:04:32.033 ServerApp] Connecting to kernel c0e005f4-74c2-4db9-8cf6-58f3091ffde5.
[I 2024-07-08 13:04:32.241 ServerApp] Connecting to kernel c0e005f4-74c2-4db9-8cf6-58f3091ffde5.
[I 2024-07-08 13:04:32.455 ServerApp] Connecting to kernel c0e005f4-74c2-4db9-8cf6-58f3091ffde5.
[I 2024-07-08 13:04:51.387 ServerApp] Kernel restarted: c0e005f4-74c2-4db9-8cf6-58f3091ffde5
[I 2024-07-08 13:04:51.523 ServerApp] Starting buffering for c0e005f4-74c2-4db9-8cf6-58f3091ffde5:792e4a69-865a-4151-8f95-376d3c7a79df
[I 2024-07-08 13:04:51.667 ServerApp] Connecting to kernel c0e005f4-74c2-4db9-8cf6-58f3091ffde5.
[I 2024-07-08 13:04:51.667 ServerApp] Restoring connection for c0e005f4-74c2-4db9-8cf6-58f3091ffde5:792e4a69-865a-4151-8f95-376d3c7a79df
[I 2024-07-08 13:06:31.279 ServerApp] Saving file at /scripts/16_Make_tables_stage2_MWAS_a3-faster.ipynb
[I 2024-07-08 13:11:45.134 ServerApp] Starting buffering for c0e005f4-74c2-4db9-8cf6-58f3091ffde5:792e4a69-865a-4151-8f95-376d3c7a79df
[I 2024-07-08 13:11:45.223 ServerApp] Connecting to kernel c0e005f4-74c2-4db9-8cf6-58f3091ffde5.
[I 2024-07-08 13:11:45.223 ServerApp] Restoring connection for c0e005f4-74c2-4db9-8cf6-58f3091ffde5:792e4a69-865a-4151-8f95-376d3c7a79df
[W 2024-07-08 13:13:15.227 ServerApp] WebSocket ping timeout after 90003 ms.
[W 2024-07-08 13:13:15.379 TerminalsExtensionApp] WebSocket ping timeout after 90000 ms.
[W 2024-07-08 13:13:15.654 TerminalsExtensionApp] WebSocket ping timeout after 90001 ms.
[I 2024-07-08 13:13:20.231 ServerApp] Starting buffering for c0e005f4-74c2-4db9-8cf6-58f3091ffde5:792e4a69-865a-4151-8f95-376d3c7a79df
slurmstepd: error: *** JOB 31998554 ON exp-2-48 CANCELLED AT 2024-07-08T16:53:26 ***
[C 2024-07-08 16:53:26.230 ServerApp] received signal 15, stopping
[I 2024-07-08 16:53:26.268 ServerApp] Shutting down 5 extensions
[I 2024-07-08 16:53:26.269 ServerApp] Shutting down 1 kernel
[I 2024-07-08 16:53:26.270 ServerApp] Discarding 8 buffered messages for c0e005f4-74c2-4db9-8cf6-58f3091ffde5:792e4a69-865a-4151-8f95-376d3c7a79df
[I 2024-07-08 16:53:26.270 ServerApp] Kernel shutdown: c0e005f4-74c2-4db9-8cf6-58f3091ffde5
Warning message:
In sink() : no sink to remove
